# src/services/resize/handler.rs
@@ -3,7 +3,7 @@ use crate::services::image::handler::ImageService;
 use crate::services::storage::handler::StorageService;
 use anyhow::{Context, Result};
 use derive_builder::Builder;
-use gen_server::models::{ImageFormat, ResizeAnImageQueryParams};
+use gen_server::models::{DownloadPathParams, ImageFormat, ResizeQueryParams};
 use std::time::Instant;
 use tracing::{debug, error, info, instrument, span, Level};
 use validator::Validate;
@@ -31,7 +31,7 @@ pub struct ResizeService {
 impl ResizeService {
     /// Main resize method that orchestrates the entire process
     #[instrument(skip(self), fields(url = %params.url))]
-    pub async fn resize(&self, params: &ResizeAnImageQueryParams) -> Result<String> {
+    pub async fn resize(&self, params: &ResizeQueryParams) -> Result<String> {
         // Generate cache key
         let cache_key = self.cache_service.generate_key(
             &params.url,
@@ -106,5 +106,14 @@ impl ResizeService {
         info!("Returning CDN URL: {}", cdn_url);
 
         Ok(cdn_url)
+    }
+
+    #[instrument(skip(self), fields(url = %params.key))]
+    pub async fn download(&self, params: &DownloadPathParams) -> Result<Vec<u8>> {
+        let download_timer = Instant::now();
+        let f = self.image_service.download_image(&params.key).await;
+        info!("download successful");
+        debug!("Image download took {:?}", download_timer.elapsed());
+        f
     }
 }
